# unslop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: python-package.yml  typescript-tests.yml
docs/paper/: spec-as-coordinator.md
prunejuice/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
prunejuice/src/: api.ts  dag.ts  discover.ts  freshness.ts  fs-utils.ts  hashchain.ts  index.ts  inheritance.ts  manifest.ts  mcp.ts  pipeline-mcp.ts  pipeline.ts  ripple.ts  spec-diff.ts  store.ts  sync.ts  types.ts  validators.ts
prunejuice/test/: api.test.ts  collision.test.ts  concrete-frontmatter.test.ts  dag-compat.test.ts  dag-mcp.test.ts  dag.test.ts  discover.test.ts  extends-chain.test.ts  freshness-compat.test.ts  freshness.test.ts  ghost-diagnostic.test.ts  hashchain.test.ts  inheritance.test.ts  manifest.test.ts  mcp.test.ts  pipeline-mcp.test.ts  ripple.test.ts  spec-diff.test.ts  store.test.ts  sync-mcp.test.ts  sync.test.ts  validators.test.ts  verify.test.ts
src/agents/: architect.ts
stress-tests/adversarial-hashing/: alignment-summary.md
test/: pipeline.test.ts
tests/: conftest.py  test_lsp_queries.py  test_mcp_server.py  test_orchestrator.py  test_prosecutor.py  test_spec_diff.py  test_symbol_audit.py  test_validate_behaviour.py  test_validate_mocks.py  test_validate_pseudocode.py  test_validate_spec.py
unslop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unslop/.claude-plugin/: .mcp.json  plugin.json
unslop/commands/: absorb.md  (+19 more)
(+137 files in other folders)
