[project]
name = "unslop"
version = "0.4.0"
description = "Spec-driven code management — orchestrator and validation scripts"
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py38"
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
